@@ -3,14 +3,11 @@ AUX lib/libGLU.la 743 RMD160 34e3adc8e0422a5477a9eaa0fee141e577afeee4 SHA1 c131d
 DIST MesaLib-7.3.tar.bz2 3368281 RMD160 ee0b06d375d1ea91dc26ae96c807918e1d3cb7c8 SHA1 24e6278a95f5913c6a6230ab50c32c5cb13b84dc SHA256 64e6e2ea556c44af7eaeea083a514a23e4f896b7856da4f006125ffc30c4379b
 DIST MesaLib-7.4.4.tar.bz2 3375615 RMD160 9c9a5e8b7f8d2fd175cc8542e2aecf48edf8c084 SHA1 1cdcef24900489bc0a879013b2138c0d9aedffe3 SHA256 eaf73d7a3a2dc959ddc0753abaa18160c64bec00b35bf4a0c96040b2072918ec
 DIST MesaLib-7.5.1.tar.bz2 4382803 RMD160 bccf6f52fce3b3c7ac6525444f907e3c2fe790c2 SHA1 26171fb4de23a21431861d6663203e400df45bf7 SHA256 48f21e5a91a82fa9fb6d0bc5ae72d9d9cc1824429dcfc759cfcc1a44e3e1440a
-DIST MesaLib-7.5.tar.bz2 4402222 RMD160 63f18e4c801d9a87961ef478cb056980c38c2720 SHA1 31ed47f3f0b6bb059957cb778d639a024d125b5d SHA256 d6730247b5fac0a329ec5e9190800ead62aa01e39de48faeb07703f11f80c877
+DIST MesaLib-7.5.2.tar.bz2 4387185 RMD160 0dc74e90afc08bde5b5e714bfb966d5b0750d84e SHA1 582141f8d28267f208c4747bd80689e32cdd6f32 SHA256 8b232fd2e7d8de5e4778f27ef11f7ff8c42c3815efc92144215734378b55e1ad
 DIST mesa-7.3-gentoo-patches-01.tar.bz2 34342 RMD160 547e3d1e8a72cd7df13bf699c181a5f8d36bff33 SHA1 51310d802ad1ee8b660fc7cf77c37b5478f3794a SHA256 e3d27046f73b6fc3d89e06fdfce9d065fa79705f59950b65350fa55bd539e56a
-DIST mesa-7.5-gentoo-patches-01.tar.bz2 2257 RMD160 1a3325e1548e290dd06a6663b9f59405be8f4529 SHA1 5c4f83622593d1d8c5d275e31d74a7896805d918 SHA256 9e21a1a225292a21436569f010600e87e39561ae945072905dacf5add158d2cc
-DIST mesa-7.5-gentoo-patches-02.tar.bz2 32508 RMD160 114a243b3f3b2b76e9924ffde36af93890c68a3a SHA1 498890941840017e3c7a4f93341b85b373da5e53 SHA256 847a8e388741e9d30c181113be55e2ae845251aff735b6c3ec8be2aa8322e3d4
 EBUILD mesa-7.3-r1.ebuild 7201 RMD160 e6cab33ecf25a465ff16e1905a55e1724dbb8dc7 SHA1 da20f865b9535c858a840b24fa003d174aa61c2c SHA256 b5d397bfa10bef3d0beb3c9d4711f2370f660cae447c4b34330b59fb1b5ac867
 EBUILD mesa-7.4.4.ebuild 7812 RMD160 df17ab6e6cd836367d3fc571372f6df2a709cbcf SHA1 4be255993b2f311fcc73329febddcd7831055704 SHA256 def04b41ee3dab328a988b4ba282f0f34cd07bc7581112b69a1b523032567af0
-EBUILD mesa-7.5-r2.ebuild 7800 RMD160 6421e23a2a5e773232607fec329a884f49b9580b SHA1 e02a20374ff8dbf166d8feacc7abd7383fe7281a SHA256 dc54061bb5c0b374a46acd986257043b1faf11a879a21f615513fe2196a032fc
-EBUILD mesa-7.5-r3.ebuild 7800 RMD160 859e85f493e2939d75d429ad21aec45b99929786 SHA1 4febe1da0102ee5454491abe1ad45f5fcfb71476 SHA256 8a3c71bc288061457ffc42b8a528d7e52d61dde51687597b3bc5661f6d21a923
 EBUILD mesa-7.5.1.ebuild 7826 RMD160 f72e9d0089da9787d5b54ce16bb752d67aa93a64 SHA1 af718e807c5ccd73068f9712504e2d9a4d5817cd SHA256 016ba469f31f4d8f3955f6153ac5edebd86cc4c10d422d0fea2785e7e3bc0723
-MISC ChangeLog 42233 RMD160 93fdc97e798101bbe67ca613e85fa5bd2223b065 SHA1 730e9aeea3c38980787d6a761f68271dda2ae7ec SHA256 e30a25e30844a3c808e1d7625bf920e477cdde7b22dfff438d796cd17c5e1989
+EBUILD mesa-7.5.2.ebuild 7826 RMD160 a87ff0c54b3d26fdff4dd947434c047262918400 SHA1 90ec82da6e23730535b1154c7287dc4d8c96282e SHA256 878344be69946dbf642bb9c02a678a0c424766b5ff2d3b35192a423f484ba8c0
+MISC ChangeLog 42408 RMD160 3292a6422ebbdb70e3331260f4310f3a52c93b77 SHA1 558c7575d51ed58fb4c0e6e33e7f9dc033447894 SHA256 442f64d735f5f91d48f0e0254dc13d995ac601d7e77eb174e35d84e49a723d39
 MISC metadata.xml 251 RMD160 e6e718c1f8c8ab33331fcdc2ed16dc7da35d04aa SHA1 a753e5190a6008a77db021b70d5962cbc2e9e488 SHA256 689bc8ac5839e4eb6173899024bf1f6169a5d3f3a1e82e4cdd80011e3e43a8de
